Bug 507166 - Handbook leads to Not Found error on KDE Docs site
Summary: Handbook leads to Not Found error on KDE Docs site
Status: RESOLVED FIXED
Alias: None
Product: glaxnimate
Classification: Applications
Component: documentation (other bugs)
Version First Reported In: 0.5.80
Platform: Microsoft Windows Microsoft Windows
: NOR normal (vote)
Target Milestone: ---
Assignee: Mattia Basaglia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-17 19:28 UTC by Lark Henriquez-Gladysz
Modified: 2026-02-14 20:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lark Henriquez-Gladysz 2025-07-17 19:28:20 UTC
STEPS TO REPRODUCE
1. Select Help > Glaxnimate Handbook (or press F1)

OBSERVED RESULT
Opens KDE Docs in browser with error message: "The application glaxnimate could not be found. Please check if you entered the name correctly, or use the navigation on the left to access the complete KDE User Documentation."

EXPECTED RESULT
Should open Glaxnimate docs at https://docs.glaxnimate.org/

SYSTEM INFO
Glaxnimate: 0.5.80-git-dc82229
Package Type: Unknown/Default
Qt: 6.8.1 (built against 6.8.1 x86_64-little_endian-llp64)
Frameworks: 6.10.0
System: Windows 11 Version 24H2
Kernel: winnt 10.0.26100
CPU: x86_64
Windowing System: windows
potrace: potracelib 1.16
libav: Lavu59.39.100, Lavf61.7.100, Lavc61.19.100, SwS8.3.100
libarchive: 3.7.2
zlib: 
pybind11: 2.11.1
CPython: 3.11.7
Inkscape:
Comment 1 Julius Künzel 2026-02-14 20:34:17 UTC
Git commit 915723e205d884808223038dd9cc8d3d0018f7ba by Julius Künzel.
Committed on 14/02/2026 at 20:33.
Pushed by jlskuz into branch 'release/0.6'.

Fix Help action tries to open non-existent offline manual

Replug the action to make it open https://docs.glaxnimate.org/. This
hack has been copied from Kdenlive. It should probably be considered to
make KF more flexible for this usecase to avoid such hacks.

M  +20   -0    src/gui/widgets/dialogs/gw_impl_ui.cpp

https://invent.kde.org/graphics/glaxnimate/-/commit/915723e205d884808223038dd9cc8d3d0018f7ba