Fix Help action tries to open non-existent offline manual

Replug the action to make it open https://docs.glaxnimate.org/. This
hack has been copied from Kdenlive. It should probably be considered to
make KF more flexible for this usecase to avoid such hacks.

BUG: 507166